# agentic

./: .gitignore  DAILY_LOG.md  README.md  pyproject.toml
notebooks/: context.ipynb  rag.ipynb  structured_output.ipynb  try.ipynb
src/RAG/: agent.py  index.py
src/agentic/: main.py  schemas.py  tools.py
